# nodemore

./: Cargo.toml  Dockerfile  LICENSE  README.md  TESTS.md  config.yml  nodemore.yml  nodemorea.yml
.github/ISSUE_TEMPLATE/: FEATURE-REQUEST.yml  ISSUE.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
farm/: index.html
src/: args.rs  config.rs  dir.rs  main.rs  time.rs
src/tests/: mod.rs  test_contains_only_folders.rs  test_delete_node_modules.rs  test_get_directory_size.rs  test_should_clean_dir.rs  test_should_clean_file.rs
wix/: main.wxs
