[package]
name = "nodemore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.release]
# strip = true
# opt-level = "s"
# lto = true
# codegen-units = 1

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
colored = "2.0.0"
humantime = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.21"

